clusters/base/apps/media-server/jellyseerr/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jellyseerr
  ports:
    - name: jellyseerr-http
      port: 5055
      protocol: TCP
      targetPort: jellyseerr-http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: media-server
  labels:
    app.kubernetes.io/name: jellyseerr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &fqdn requests.${DOMAIN}
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - *fqdn
      secretName: jellyseerr-cert
  rules:
    - host: *fqdn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  name: jellyseerr-http
